--- a/src/Oxide.Rust.csproj
+++ b/src/Oxide.Rust.csproj
@@ -14,7 +14,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <SteamAppId>258550</SteamAppId>
-    <SteamBranch>public</SteamBranch>
+    <SteamBranch>aux01</SteamBranch>
     <SteamLogin>anonymous</SteamLogin>
     <GamePlatform>windows;linux</GamePlatform>
     <GameExe>RustDedicated.exe;RustDedicated</GameExe>
